# calculator

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  calcexp.cpp  calcexp.h  main.cpp  message_win.txt
test/: CMakeLists.txt  main.cpp
